--- a/content/秩序是靈魂的第一需要.md
+++ b/content/秩序是靈魂的第一需要.md
@@ -1,4 +1,5 @@
 ---
+aliases: 
 title: "秩序是靈魂的第一需要"
 draft: 
 tags: 
@@ -6,7 +7,7 @@ tags:
 - 秩序
 - 道德
 date: 2023-02-23
-lastmod: 2023-02-25
+lastmod: 2023-02-27
 ---
 >「高格調的秩序」是自由和正義的藏身之處——Russell Kirk
 
@@ -50,7 +51,7 @@ lastmod: 2023-02-25
 
 ---
 
-## 檢討秩序的起點
+## 先求守成，再求改進
 
 **[價值階級](「價值階級」之於個人和社會.md)，就是辨認某些事物比其他事物更重要。一個社會要能建立秩序，需要大部分的成員都同意一套共同的價值階級，讓人們能夠為他們同樣重視的東西共同努力、避開不夠重要的活動、甚至懲罰那些有違共同價值的行為。**
 
@@ -77,8 +78,6 @@ lastmod: 2023-02-25
 一間公司有可能在規模變大後出現腐敗的文化，人們開始玩政治、酬庸、搞小手段來晉升。在這種時候，有些人顯然不再秉持著跟公司本身相同的價值、秩序不再正確地運作、群體沒有以同一套價值階級去合作。微小的貪腐行徑若未被他人及時指出糾正，便會帶著公司一點一滴走向衰敗。全球500大企業名單大多無法在榜上連續待超過三十年、大部分成功的家族企業也很難生存超過三個世代，顯示了要維繫一個組織長期的有效合作、穩定運作是如此地艱難，更遑論要它與時俱進、進步創新。（更多精闢的分析在福山的《信任》多有著墨。）
 
 企業可能因文化腐敗而聘僱或晉升錯誤的人選、家庭可能因缺乏自省而以傳統價值去傷害個人自由、你我亦可能一時盲目而錯把另有所圖的人當成盟友，但這些都沒有消減秩序之於人類群體的重要性。相反地，這顯示了為什麼我們不僅必須充分認知到秩序的運作、時時審視著當下身處的組織是圍繞著什麼價值而生，更要慎重地面對關於人的各種決定、積極地捍衛價值的矗立、並適時做出調整與更正。所以我們在商管領域總能聽到關於企業文化的討論，也是為什麼當家裡長輩相繼過世時，我們能從後輩們接下來的互動中清楚觀察到家庭價值的彰顯或失落。
-
----
 
 **唯有當我們釐清秩序、傳統、規範背後的原則，才能對之進行像樣的檢討**。盲目服從規範與教條無益個人智識的提升，當然也就不可能促進文明的進步。我們既不應該因為先輩已經替我們建立了成規和傳統就矇上眼照著幹、不花任何力氣去理解規範和傳統背後的原則，也不應該因為任何成規和傳統是先輩留下來的「過時產物」，就在還沒有看清它們的原則及意義、甚至也給不出一個像樣的替代方案時，就將它們恣意鄙棄。
 
