--- a/content/傲慢所致的世界觀.md
+++ b/content/傲慢所致的世界觀.md
@@ -1,10 +1,10 @@
 ---
 title: "傲慢所致的世界觀"
-aliases: 
-tags: 
-draft: true
+aliases: []
+tags: [社會, 道德, 基督教, 政治]
+draft: 
 date: 2023-02-25
-lastmod: 2023-02-26
+lastmod: 2023-02-27
 ---
 ## 效益論的謬誤
 
@@ -47,4 +47,6 @@ lastmod: 2023-02-26
 
 更進一步來說，切斯特頓的柵欄告誡我們，當我們企圖干預他人建立起的系統或措施時，最好假設前人考慮了某些我們尚未了解的事情、或者有我們無法理解的經歷，所以我們不應躁進地尋求快速解法，因為這可能反讓情況變糟。
 
-切斯特頓的柵欄不是要勸退任何企圖改善現況的人，但它是一個重要的呼籲：在干預現狀前，先理解背後的思維。我們並不總是比那些在我們之前做出決定的人更清楚狀況；唯有深刻地同理前人的經歷及其面對的挑戰，我們才會更洞悉全局、看清當前措施的細微之處。除非我們知道為什麽有人做出這樣的決定，否則我們無法安全地改善它、或斷定他們做錯了。
+切斯特頓的柵欄不是要勸退任何企圖改善現況的人，但它是一個重要的呼籲：在干預現狀前，先理解背後的思維，[先求守成，再求改進](秩序是靈魂的第一需要.md)。我們並不總是比那些在我們之前做出決定的人更清楚狀況，因此唯有深刻地同理前人的經歷及其面對的挑戰，我們才會更洞悉全局、看清當前措施的細微之處。除非我們知道為什麽有人做出這樣的決定，否則我們無法安全地改善它、或斷定他們做錯了。
+
+---
