--- a/content/秩序是靈魂的第一需要.md
+++ b/content/秩序是靈魂的第一需要.md
@@ -1,11 +1,8 @@
 ---
-aliases: 
+aliases: []
 title: "秩序是靈魂的第一需要"
 draft: 
-tags: 
-- 社會
-- 秩序
-- 道德
+tags: [社會, 秩序, 道德]
 date: 2023-02-23
 lastmod: 2023-02-27
 ---
