--- a/content/傲慢所致的世界觀.md
+++ b/content/傲慢所致的世界觀.md
@@ -2,7 +2,7 @@
 title: "傲慢所致的世界觀"
 aliases: []
 tags: [社會, 道德, 基督教, 政治]
-draft: true
+draft: 
 date: 2023-02-25
 lastmod: 2023-02-27
 ---
@@ -50,3 +50,36 @@ lastmod: 2023-02-27
 切斯特頓的柵欄不是要勸退任何企圖改善現況的人，但它是一個重要的呼籲：在干預現狀前，先理解背後的思維，[先求守成，再求改進](秩序是靈魂的第一需要.md)。我們並不總是比那些在我們之前做出決定的人更清楚狀況，因此唯有深刻地同理前人的經歷及其面對的挑戰，我們才會更洞悉全局、看清當前措施的細微之處。除非我們知道為什麽有人做出這樣的決定，否則我們無法安全地改善它、或斷定他們做錯了。
 
 ---
+## 傲慢所致的世界觀
+
+尼采批判基督宗教的「此岸彼觀」，他認為這種「當現世只是過渡、彼岸理型才完美」的觀點，是種對生命的敵視。尼采以降，我們能在大眾文化中清晰觀察到尼采的重大影響。看看電影、聽聽幾乎每首歌，當今流行文化中的每一則故事，都在訴說人們如何脫離迂腐框架的束縛、「找到自我」、開啟能由自己主導的人生。
+
+若以尼采可能偏好的措辭來說，現代人不再懦弱、迷信、低聲下氣地過著他們相信只是過渡的人生，苟且寄望著美好的來世；相反地，現代人能用勇敢、理性、強大的意志去扛住人生「虛無」的重量、重估生命的價值、戰勝虛無主義。
+
+但事實是如此嗎？
+
+在人人皆倚靠並歌頌「自我」的時代裡，現代人反而更深刻體認到生命意義的空洞、現實世界的無力、消費主義下人人背負的卑劣和匱乏、社會傳統是個箝制個人的大牢籠、以及地球上有過多如同瘟疫般的人類。
+
+現代人找到的不是高貴、自主、強大的生命意志，而是**身為二十一世紀人類的新原罪**。
+
+可想而知，**當人類身上只背負著罪、卻屏棄一切能夠仰望的理想時**，我們便輕蔑無知地對一切秩序、傳統、和慣習都嗤之以鼻；用消費刺激來填補生命的空虛和無力感；在社群媒體上比賽誰能釋放更多關於平權或環境議題的美德訊號；動員封殺（那些道德低落、不配當人的）異己的話語權；還樂意賦予[政治菁英更大的權力](氣候運動家是對民主的侮辱)將我們看不順眼的人當小孩管教（並以為自己不會有天也變成被管教的那個）。
+
+於是，人心中的那個「[神形狀的真空](https://www.goodreads.com/quotes/801132-there-is-a-god-shaped-vacuum-in-the-heart-of-each)」，被許多現代人用政治、種族、性向、環境等各式主題填入，成了宗教的替代品。
+
+不僅如此，正因為人們量度一切的基準是「自我」、不是自身之外的理想，許多前衛、自由、激進派的人更相信自己是天選之人，秉持著「我們有能力將美好帶來此世」的理想主義，要為此世創造一個無可妥協的烏托邦。
+
+這種理想主義使現代人樂意信任個人經驗和特定權威，反而不願意嚴謹地遵循權力分立和去中心化的系統性進程，亦即[湯瑪斯·索維爾所說的「Unconstraind Vision」](願景的衝突)——他們以理想主義看待人性，所以相信具有遠見和道德高度的人有資格引領並改變世界，也有責任剷除文化或體制中的敗壞陳腐。他們不願意相信系統性、一步一腳印、由下而上自然產生的秩序，更難以尊敬引領人類走到今天的文化根基。
+
+或許，這個時代迫切需要的，是被我們連同彼岸和理型一起丟棄的那份謙卑。
+
+真正「盼望更高理想」的此岸彼觀，應激發人的愛、謙卑、和包容，因為我們會發現自己沒有資格論斷自己和他人此刻的罪、也不應該用任何「事實就是如此」的消極態度看待世事。相反地，**對理想的盼望要求我們總是試圖超越人事物當下「所是」的樣子、努力看見並實現他們[「所能夠成為」的潛能](道德的情境與潛能)。**
+
+存在主義、其衍生出的虛無主義和唯物主義、以及當代前衛自由派的理想主義，都專注於事物和生命此刻「所是」的樣子。**當我們只看見事物當下「所是」那樣差強人意的樣貌、而不將焦點投注在他們「有可能成為」的潛能時，最自然合理的反應當然就是憤世嫉俗、猛烈控訴、搜捕導致這一切的罪魁禍首。**
+
+以自我為判準的「此世」的傲慢，讓我們只看見人事物乏善可陳的一面，並以為自己可以置身一切事外、該檢討的總是別人；以理想為依歸的「彼岸」的謙卑，要我們盡力發現人事物之中未被開發、變得更好的潛能，並意識到自己也在這世界的善惡對錯之中承擔著舉足輕重的責任。
+
+也正如《卡拉馬助夫兄弟們》中所寫的：
+
+>我們中的每個人都應當為世界上所有的人和所有的事而感到自己有罪，只有認清了這點，才能說是經過修煉而得道，這也是塵世間任何人應該走的路。
+
+要證實這個幾乎驚世駭俗的觀點的真偽，靠的不是邏輯推理，而是生命的實踐。
