--- a/content/盡責地善待自己.md
+++ b/content/盡責地善待自己.md
@@ -35,7 +35,7 @@ lastmod: 2023-02-23
 
 ---
 
-## 理想與良知
+## 理想是生命意義的前提
 
 人活在世上，不可能不秉持著一套對自我、對世界、對人生風景的理想，因為無論我們做什麼、如何選擇、往哪兒去，都必定是在更宏觀的角度裡，試圖逼近自己心中的某種形式的「更好」、「更值得前往」的境地，無論那是你每一天把自己拖出被窩準備上班、和伴侶討論生小孩的計畫、或決定為照顧年邁母親而辭職搬回家鄉。
 
