--- a/content/傲慢所致的世界觀.md
+++ b/content/傲慢所致的世界觀.md
@@ -78,7 +78,7 @@ lastmod: 2023-02-27
 
 以自我為判準的「此世」的傲慢，讓我們只看見人事物乏善可陳的一面，並以為自己可以置身一切事外、該檢討的總是別人；以理想為依歸的「彼岸」的謙卑，要我們盡力發現人事物之中未被開發、變得更好的潛能，並意識到自己也在這世界的善惡對錯之中承擔著舉足輕重的責任。
 
-也正如《卡拉馬助夫兄弟們》中所寫的：
+正如《卡拉馬助夫兄弟們》中所寫的：
 
 >我們中的每個人都應當為世界上所有的人和所有的事而感到自己有罪，只有認清了這點，才能說是經過修煉而得道，這也是塵世間任何人應該走的路。
 
