--- a/content/「價值階級」之於個人和社會.md
+++ b/content/「價值階級」之於個人和社會.md
@@ -39,7 +39,7 @@ lastmod: 2023-02-23
 
 ## 社群的價值階級
 
-無論在家庭、學校、軍隊、或職場，我們隨時都在摸索著當下身處之群體的目標為何、秩序是如何建構、人與人之間的關係是什麼，進以衡量自己的所在位置、用適當的方式言行。唯有如此，我們才能發現自己在群體中的功能和角色、發揮個人的所長、定義自身存在（之於當下群體）的價值——**「社會化」正是一個人將「個體目標」向「群體目標」校準對齊的過程**，它從我們牙牙學語以來就從未停止過。
+無論在家庭、學校、軍隊、或職場，我們隨時都在摸索著當下身處之群體的目標為何、秩序是如何建構、人與人之間的關係是什麼，進以衡量自己的所在位置、用適當的方式言行。唯有如此，我們才能發現自己在群體中的功能和角色、發揮個人的所長、定義自身存在（之於當下群體）的價值——**「社會化」就是一個人將「個體目標」向「群體目標」校準對齊的過程**，它從我們牙牙學語以來就從未停止過。
 
 一間公司的共同目標若是「創造最大利潤」，那麼公司內的每一個人都需要被放在能夠成就這個目標的位置、各司其職，你跟其他人應該如何合作互動都會得到定義和規範，你也會被賦予相對應的使命和職責、定義著你之於這個群體的存在意義。同樣地，一個家庭裡的共同目標若是「和諧安康」，那麼家庭成員就必須為此齊心協力、扮演好各自的角色、充分認知到自己能夠為家庭創造的貢獻。
 
@@ -67,9 +67,7 @@ lastmod: 2023-02-23
 
 無論是家庭、公司、乃至整個國家，如果沒有廣受接納的信仰系統、沒有對群體目標的普遍共識、沒有至少一種多數人同意的價值階級，就不可能建立秩序、不可能有效分工並解決問題、不可能產生能夠指引人們去為自己和周遭他人創造更多安康的「生命藍圖」——**一個社會所共享的價值和敘事，是無數前人歷經長時間的磨合、省思、與洗鍊後所得到的，關於人生的系統性解答。**
 
-大自然如此殘酷無情、生命如此乖舛無常，如果我們以為人類可以拋開沉重的階級秩序、像童話故事裡的森林小動物般自由獨立、無憂無慮地生活，那實是對世界、對歷史、對人性都太過無知了。
-
-確實，社會奉行的秩序也可能替暴君背書、長久傳承的價值也可能迫害個人，但那既非任何社會秩序的初衷、更不是其運作健全的成果。我們舉目所見的社會價值和階級秩序，遠遠不是用來限制、壓迫個人自由的無謂枷鎖，而是人類在倉皇紊亂的世界裡，企圖為彼此的生命找到安定與意義的渺小努力。
+我們舉目所見的社會價值和階級秩序，遠遠不是用來限制、壓迫個人自由的無謂枷鎖，而是人類在倉皇紊亂的世界裡，企圖為彼此的生命找到安定與意義的渺小努力。大自然如此殘酷無情、生命如此乖舛無常，如果我們以為人類可以拋開沉重的階級秩序、像童話故事裡的森林小動物般自由獨立、無憂無慮地生活，那實是對世界、對歷史、對人性都太過無知了。
 
 因此，在我們對各種形式的社會秩序提出批判之前，我們應當認清的事實是：**無論宗教、傳統、倫理、或文化，這些價值階級所做的事情，並非只是（現代人樂於控訴的）將你無情地捏塑成適合嵌入社會整體裡的形狀，有甚於此，它們也事先替你把整個社會形塑成了一個穩定互信、有跡可尋、使你能安心容身的地方。**
 
