--- a/content/「樂觀虛無主義」與生命意義.md
+++ b/content/「樂觀虛無主義」與生命意義.md
@@ -6,19 +6,11 @@ tags:
 date: 2023-02-23
 lastmod: 2023-02-23
 ---
-我曾經深信人類在浩瀚宇宙中只不過是個偶然的出現、宗教和傳統對人類價值的答案早已過時、你我的存在並沒有根本性的目的。
-
-有些人將這種虛無主義觀點推得更深更遠：否定造物主、認為道德觀和社會標準了無意義、相信自己唯一該做的就是那些令自己開心或問心無愧的事。也有更多人在擺脫傳統、否定人類的特殊性之後，選擇把「搞清楚怎麼看待人生」的功課拋諸腦後。
-
-在邁向而立的幾年人生轉折裡，我越發地企望一套寬廣、堅忍、受時間考驗的人生觀，能夠指引我穿越生命的暗巷、還有接下來必將行經的低谷。我發現了虛無主義觀點無法回答的許多問題，而就算為之冠上「樂觀」的帽子，也無法掩藏它根本上的瑕疵與狹隘。
-
-這篇文章我將試著探討「樂觀虛無主義」的主張、背景、及謬誤，並簡述「生命意義」問題的本質。
+本文回應了「[樂觀虛無主義](https://youtu.be/MBRqu0YOH14)」、並簡述「生命意義」問題的本質。
 
 ---
 
 ## 何謂「樂觀虛無主義」
-
-什麼是「樂觀虛無主義」？讓我們瞧瞧[這支超過一千萬觀看的同名影片](https://youtu.be/MBRqu0YOH14)。
 
 根據影片，虛無主義告訴我們：
 
@@ -43,8 +35,7 @@ lastmod: 2023-02-23
 
 ## 「樂觀虛無主義」的謬誤
 
-
-「樂觀虛無主義」表面上既符合科學事實、又通融人性需要，看似是個適合當代人類的生活態度，然而當我沿著它指引的方向走下去，我發現**「樂觀虛無主義」幾乎是個太奢侈、太安逸、且帶著某種「道德健忘」的淺碟人生觀。**
+「樂觀虛無主義」表面上既符合科學事實、又通融人性需要，看似是個適合當代人類的生活態度，然而當我沿著它指引的方向走下去，我發現 **「樂觀虛無主義」幾乎是個太奢侈、太安逸、且帶著某種「道德健忘」的淺碟人生觀。**
 
 原因如下：  
 
@@ -78,7 +69,6 @@ lastmod: 2023-02-23
 
 ## 「生命意義」問題的本質
 
-
 如果追根究底，其實不難發現「樂觀虛無主義」在語意上是個矛盾的概念。
 
 當你知道1+1＝2，你不會問「這樣是好還是壞」或「這是應該發生的嗎」。如果我們用真正的虛無主義觀點去看待人類的存在、真的以百分之百的客觀理性行事，那麼在得知「人生本無意義」的客觀事實之後，我們並沒有理由接著辯解「為什麼我應該／不應該繼續活著」。追問「為什麼要做任何事情」或「為什麼不做點什麼」都是不必要的反射性問題；接著思考自己「應不應該自殺」也同樣是不必要的抉擇。
@@ -89,7 +79,7 @@ lastmod: 2023-02-23
 
 所以「樂觀」的主觀態度和「虛無」的客觀事實這兩個在技術上互不相容的詞彙，卻能毫無矛盾地共存於許多人的生命觀，是因為**經由人類的自我意識，許多事物得以存在於「應然」和「實然」、「主觀」和「客觀」、「價值」和「物質」交疊的灰色地帶裡。**
 
-舉例而言，道德、新點子、意識形態等「非實際存在」的事物能以有形且有脈絡的方式左右物質世界的運作和資源分配，而農耕工具、印刷術、iPhone等「實際存在」的東西也都用非常具體的方式扭轉了人類世界的心智、價值、和秩序。廣受好評的《人類大歷史》（Sapiens: A Brief History of Humankind）更是鉅細靡遺地描繪了人類如何透過對上帝、金錢、國家等「不存在」事物的「共同想像」，進行大規模的合作、帶來驚人的文明進步。
+舉例而言，道德、新點子、意識形態等「非實際存在」的事物能以有形且有脈絡的方式左右物質世界的運作和資源分配，而農耕工具、印刷術、iPhone等「實際存在」的東西也都用非常具體的方式扭轉了人類世界的心智、價值、和秩序。廣受好評的《人類大歷史》更是鉅細靡遺地描繪了人類如何透過對上帝、金錢、國家等「不存在」事物的「共同想像」，進行大規模的合作、帶來驚人的文明進步。
 
 但身在如此宏大深遠的文明長河之中，你如何能說道德、價值、甚至金錢和國家等事物都只是不真實的想像物呢？難道我們該相信是這些「不存在」的東西幾千年來在地球上開疆闢土倒海移山的嗎？
 
@@ -108,21 +98,3 @@ lastmod: 2023-02-23
 若非出自對生命意義的深層渴望，我們不會在得知「人生本無意義」的下一秒就直覺地拋出「為什麼要做任何事」的存在問題；當我們將「樂觀」冠上「虛無主義」時，那也是你我內心深處的同一份直覺，驅使我們必須用積極、創造性的生命態度去抗衡「人生本無意義」的殘酷事實——這個名目說不說得通，其實從來就不是重點。
 
 如你所見，「樂觀虛無主義」距離真正的虛無主義還遠得很，它只能算是現代人為了抗衡當代生活的意義浩劫、證成自己在宇宙中的存在合理性、同時兼容理性和科學所做的最新一次嘗試。
-
----
-
-## 生命意義的必須
-
-雖然文章裡我僅簡短帶到兩次尼采的名字，但尼采對當代虛無主義觀點的影響絕對是舉足輕重，更是許多不滿現實、喜好顛覆色彩的年輕人用來搭配唯物論和自然主義服用的良方。加上Richard Dawkins領軍的新無神論運動的推波助瀾，現代人對真理、意義、典範、及其伴隨而來的責任的否定和抗拒，可說是理所當然、理直氣壯——十年前，我個人「理性啟蒙」的起點也無異於此。
-
-然而諷刺的是，現代人擁抱的虛無主義既不及尼采鑽研的思想深度、更不見尼采在虛無中重估一切價值以求重建生命意義的艱辛努力。多數人的虛無主義人生觀僅止步於「只要我喜歡」的個人主義結論、彷彿活得開心真的是生來世上唯一重要的事情，而「生命意義」的問題就任由應接不暇的消費娛樂給淹沒。
-
-一個人或許可以理直氣壯地聲稱人生並無其終極意義，但無法辯解的是，我們生來此世必得經歷的那些痛苦都會是再真實不過，沒有任何一種意識形態的取巧詭辯能使降臨在你我身上的痛苦化為烏有。或許許多宗教所稱「人生是苦」的本質亦可以如此理解。
-
-一些緣故使我最近一年來有不少跑醫院的必要。像醫院這樣的地方，往往能迫使你謙卑地面對人生作為「苦海」的根本事實。
-
-每一次在醫院裡望著擦身而過的陌生臉龐，設想每一個可能正受病痛煎熬、徬徨無助、艱辛照顧著親人、無奈承擔著多舛命運的人們的內心百感，以及那些戰勝病魔、迎接新生命、聽到好消息而如釋重負、還有今晚就能出院回家團聚的人們心中的感激與欣喜……我實在無法就這麼相信人類生命的無足輕重。
-
-**當你親眼見證了人類可能面臨的種種苦難，就幾乎不可能無視人們扛起這些苦難時所展露的堅毅火光。而我相信，正是人類在苦難中彰顯的這絲堅毅，向我們顯示了生命意義的存在。**
-
-尼采說”He who has a why to live can bear almost any how”——如何為現代社會找到一條（或多條）指明生命意義的道路，將是我們接下來必須正視的工作。
