--- a/content/「神聖個人」作為人類世界的基石.md
+++ b/content/「神聖個人」作為人類世界的基石.md
@@ -12,15 +12,11 @@ lastmod: 2023-02-25
 
 ## 人類文明與個人生命的基石
 
-很長一段時間來，我一直想以自己有限的智識去發現那個在社會及個人生命中最根本的公理、最深層的基礎、最不可能被推倒的第一塊積木。要回答這種根本性的問題，最合理的作法或許就是回頭追溯人類偉大傳統所提供的解答：神學家Thomas Aquinas稱此「不動的推動者」作上帝，老莊思想則謂之為「道」。
-
-我不敢說自己已經準備好為上帝或道辯護，所以暫且我得退一步說，我相信在文明和生命之下最不可侵犯的基石，是所謂的個人主權（Individual Sovereignty），或者我喜歡稱之為「**神聖個人**」。
-
 「神聖個人」的意思是，人類世界裡最重要的單位是個人。個人之所以神聖，不是來自他身上既有的被動特質、未經檢驗的慾望索求、或隨波逐流的粗心言行，而是因為他擁有身而為人的重要潛能：**行使理性、瞭解自我、敬天愛人、彰顯良善、生產創造、追求卓越。**
 
 每一個人都有獨一無二的經歷與可能性，但你我皆因具備這些潛能而神聖、應當受到社會群體的尊敬與重視、並且值得我們富有責任感地善待和灌溉自己——這需要我們拿出主動性、理性、道德、責任感、以及創造力去實現。
 
-所以，任何**將個人尊嚴和主動性「降格」、草率地把自己或他人化約成沒有自主意識的標籤化單位**的傾向，諸如受害者情結、群眾心理、道德勒索、威權主義、非黑即白的二元善惡觀等，我們都必須保持警覺，因為這些心理陷阱不僅會出現在他人身上，更可能自你我內心浮現。
+任何**將個人尊嚴和主動性「降格」、草率地把自己或他人化約成沒有自主意識的標籤化單位**的傾向，諸如受害者情結、群眾心理、道德勒索、威權主義、非黑即白的二元善惡觀等，我們都必須保持警覺，因為這些心理陷阱不僅會出現在他人身上，更可能自你我內心浮現。
 
 無論今天要進行關於法治、經濟、道德、正義、公平的討論，都該優先從「**擁有自由意志、能夠主動作為、富有創造力與影響力的個人**」出發。種族、宗教、性向、資產階級等其他社會單元和分類縱然有其論述的用途，但均不該凌駕個人的神聖重要性。唯有當我們戒慎但堅定地捍衛「神聖個人」的立場，才能避免重複落入歷史上無以計數的善惡對立、部落主義、威權統治、身份政治等泯滅個人以致釀成巨災的意識形態陷阱。
 
