--- a/content/「樂觀虛無主義」與生命意義.md
+++ b/content/「樂觀虛無主義」與生命意義.md
@@ -75,13 +75,13 @@ lastmod: 2023-02-23
 
 「樂觀虛無主義」就像是聲稱你相信「善良的數學公理」，你一手高舉客觀事實、另一手卻為之強加了主觀的信念。
 
-不過不同於數學公理，「虛無主義」描述的是一個關於人類生命的根本事實、一個直接挑戰了你我存在本質的尖銳論調。作為一個「意識」的本體，你可以一輩子都對數學公理和一籮筐的其他事物恍若未聞，但你不可能對自身的存在毫無自覺——這個事實只是「我思故我在」的倒裝句罷了。
+不同於數學公理，「虛無主義」描述的是一個關於人類生命的根本事實、一個直接挑戰了你我存在本質的尖銳論調。作為一個「意識」的本體，你可以一輩子都對數學公理和一籮筐的其他事物恍若未聞，但你不可能對自身的存在毫無自覺——這只是「我思故我在」的倒裝句罷了。
 
 所以「樂觀」的主觀態度和「虛無」的客觀事實這兩個在技術上互不相容的詞彙，卻能毫無矛盾地共存於許多人的生命觀，是因為**經由人類的自我意識，許多事物得以存在於「應然」和「實然」、「主觀」和「客觀」、「價值」和「物質」交疊的灰色地帶裡。**
 
 舉例而言，道德、新點子、意識形態等「非實際存在」的事物能以有形且有脈絡的方式左右物質世界的運作和資源分配，而農耕工具、印刷術、iPhone等「實際存在」的東西也都用非常具體的方式扭轉了人類世界的心智、價值、和秩序。廣受好評的《人類大歷史》更是鉅細靡遺地描繪了人類如何透過對上帝、金錢、國家等「不存在」事物的「共同想像」，進行大規模的合作、帶來驚人的文明進步。
 
-但身在如此宏大深遠的文明長河之中，你如何能說道德、價值、甚至金錢和國家等事物都只是不真實的想像物呢？難道我們該相信是這些「不存在」的東西幾千年來在地球上開疆闢土倒海移山的嗎？
+身在如此宏大深遠的文明長河之中，你如何能說道德、價值、甚至金錢和國家等事物都只是不真實的想像物呢？難道我們該相信是這些「不存在」的東西幾千年來在地球上開疆闢土倒海移山的嗎？
 
 或許我們真正該反思的是，**「何謂真實」這個問題其實遠比我們所想的要深刻細微且包羅萬象。**
 
