--- a/content/傲慢所致的世界觀.md
+++ b/content/傲慢所致的世界觀.md
@@ -72,7 +72,7 @@ lastmod: 2023-02-27
 
 或許，這個時代迫切需要的，是被我們連同彼岸和理型一起丟棄的那份謙卑。
 
-真正「盼望更高理想」的此岸彼觀，應激發人的愛、謙卑、和包容，因為我們會發現自己沒有資格論斷自己和他人此刻的罪、也不應該用任何「事實就是如此」的消極態度看待世事。相反地，**對理想的盼望要求我們總是試圖超越人事物當下「所是」的樣子、努力看見並實現他們[「所能夠成為」的潛能](道德的情境與潛能)。**
+真正「盼望更高理想」的此岸彼觀，應激發人的愛、謙卑、和包容，因為我們會發現自己沒有資格論斷自己和他人此刻的罪、也不應該用任何「事實就是如此」的消極態度看待世事。相反地，**對理想的盼望要求我們總是試圖超越人事物當下「所是」的樣子、努力看見並實現他們[「所能夠成為」的潛能](棉花糖實驗與道德潛能.md)。**
 
 存在主義、其衍生出的虛無主義和唯物主義、以及當代前衛自由派的理想主義，都專注於事物和生命此刻「所是」的樣子。**當我們只看見事物當下「所是」那樣差強人意的樣貌、而不將焦點投注在他們「有可能成為」的潛能時，最自然合理的反應當然就是憤世嫉俗、猛烈控訴、搜捕導致這一切的罪魁禍首。**
 
