--- a/content/別低估你今天可以做對的事.md
+++ b/content/別低估你今天可以做對的事.md
@@ -66,7 +66,7 @@ lastmod: 2023-02-23
 
 ## 正確行為的積累
 
-基於此前的論述，我們已經釐清了一個清晰且值得投身的方向，但這還只是第一步。接下來，我們該思考「[有意識地建立或參與能讓自身德性更可靠的情境](道德的情境與潛能)」具體而言代表什麼。
+基於此前的論述，我們已經釐清了一個清晰且值得投身的方向，但這還只是第一步。接下來，我們該思考「[有意識地建立或參與能讓自身德性更可靠的情境](棉花糖實驗與道德潛能.md)」具體而言代表什麼。
 
 討論意志力的書籍經常建議我們要為自己打造一個容易養成良好習慣、能以最小阻力完成正確行動的環境：如果你想要瘦身，就把垃圾食物通通丟掉；如果你想戒掉手機成癮，就該買個Kitchen Safe當成你的「慾望控制箱」；如果你想要一大早就出門運動，或許可以考慮直接穿著運動套裝上床睡覺……諸如此類。
 
