--- a/content/「價值階級」之於個人和社會.md
+++ b/content/「價值階級」之於個人和社會.md
@@ -7,55 +7,31 @@ tags:
 date: 2023-02-23
 lastmod: 2023-02-23
 ---
-人是社會性的動物，人活著就不可能擺脫與其他人的交流互動，亦不可能對自己所處社群的重要性目盲。我們透過與人的互動來認識自己、找到意義。
-
-社會必須建立於一定的秩序之上，否則社群、組織等字眼都將不具意涵，但在二十一世紀的今天，許多人急於批判任何形式的秩序，相信那是權威、腐舊、壓迫的象徵。
-
-在批判一個社會的本質以前，我們應該先認清它其來有自，才可能正確地看待自己跟社會間的關係，進以理清自己在人類社群裡擔任的角色及其意義。
-
----
-
 ## 價值階級與個人生活
 
-「階級(Hierarchy)」這個字的本意是指事物的擺置順序：一個東西應該在另一個東西之上、之下、或同等。當一個東西在另一個東西之上時，即彰顯了優先順序的存在，指出一個東西的重要性勝過另一個東西。唯有確認了事物的優先順序、將時間和注意力投注於相對重要的任務上、適時忽略優先度較低的東西，我們才能夠朝特定目標前進——這可說是「瞄準(Aim)」這個詞的技術性描述。
+「階級(Hierarchy)」是指事物的擺置順序：一個東西應該在另一個東西之上、之下、或同等。一個東西在另一個東西之上時，即彰顯了優先順序的存在，指出一個東西的重要性勝過另一個東西。唯有確認了事物的優先順序、將時間和注意力投注於相對重要的任務上、適時忽略優先度較低的東西，我們才能夠朝特定目標前進——這可說是「瞄準(Aim)」這個詞的技術性描述。
 
-無論是在你每天前往公司的路上、組著鋼彈模型的週末午後、還是讀著這篇文章的此刻，**你都身體力行著自己作為一個「目的性的存在」的這件事**：你的雙眼之所以能夠聚焦，是因為你知道什麼值得灌注你的注意力、而什麼可以被暫時忽略；你的雙腳之所以能夠邁向某個方向，是因為綜合考量一切條件之後，你相信「前往目的地」比起「停留在原點」還要有價值（或至少比較不痛苦）。
+根據上述，無論是在你每天前往公司的路上、組著鋼彈模型的週末午後、還是讀著這篇文章的此刻，**你都身體力行著「瞄準」的動作**：你的雙眼之所以能夠聚焦，是因為你知道什麼值得灌注你的注意力、而什麼可以被暫時忽略；你的雙腳之所以能夠邁向某個方向，是因為綜合考量一切條件之後，你相信「前往目的地」比起「停留在原點」還要有價值（或至少比較不痛苦）。
 
-要說明這點，更精闢的案例是這個著名的[心理測驗](https://youtu.be/vJG698U2Mvo)：大多數的受試者都忙著數影片裡白衣球員總共傳了幾次球，而沒有看到從畫面正中央走過的大猩猩。這告訴了我們：當你有一個明確的意圖，你的生理與心理會攜手合作，釐清哪些資訊是重要的、哪些東西是你必須注意的（白衣球員和他們傳球的動作），又有哪些資訊是與當下目的無關的、哪些東西是可以被忽略或應該被視為阻礙（黑衣球員和同樣是黑色的大猩猩）。
+要說明這點，更精闢的案例是這個著名的[視覺錯覺測驗](https://youtu.be/vJG698U2Mvo)：大多數的受試者都忙著數影片裡白衣球員總共傳了幾次球，而沒有看到從畫面正中央走過的大猩猩。這顯示了：當你有一個明確的意圖，你的生理與心理會攜手合作，釐清哪些資訊是重要的、哪些東西是你必須注意的（白衣球員和他們傳球的動作），又有哪些資訊是與當下目的無關的、哪些東西是可以被忽略或應該被視為阻礙（黑衣球員和同樣是黑色的大猩猩）。
 
-從你我每一天下床的那一刻起，這一份「目的性」便驅策著我們一整天的生活。我們在心中清楚區分了哪些東西重要、哪些可以被忽視，進以分配時間、行動、和情緒。幫助我們做出這個區別的，就是你我心中的 **「價值階級 (Value Hierarchy)」——在每一個當下，判斷哪些事物優先於其他**。
+**你我在生活中的每一刻，都用行動體現著自己心中的價值階級**——在每一個當下，判斷哪些事物優先於其他。而那未必跟我們自以為相信、掛在嘴上講給別人聽的價值如出一徹。因此要判斷一個人真正相信、真正放在優先順位的事情，最好的方式是觀察他的行動而非說詞——對我們自己也是一樣。
 
-再者，人會想要讓自己的價值被看見、相信自己是被需要的、知道自己活著的意義為何。也因此當一個人遭逢意外（比方說感情破裂、工作失利、肢體損傷等），導致長期信奉的信念受到質疑、或生存目的遭到剝奪時，他自然會出現「認同危機 (Identity Crisis)」——這等同是告訴他「你這些年來『瞄準』的目標是錯的／已不復存在」。
-
-一個人在人生中幾乎每分每秒都「瞄準」著什麼、朝某個方向前進，所以喪失方向的傷害絕對非同小可、更不是朋友在旁邊安慰「你不要這樣想就好了」可以輕易解決的。
-
-從實務的角度看，**你我在生活中的每一刻，都用行動體現著自己心中的價值階級**，而那未必跟我們自以為相信、掛在嘴上講給別人聽的價值如出一徹。因此要判斷一個人真正相信、真正放在優先順位的事情，最好的方式是觀察他的行動而非說詞——對我們自己也是一樣。
-
-人類作為「目的性的存在」，我們**不可能假裝所有事情都不重要、抑或都一樣重要**，我們必須區分哪些事物比其他事物更重要，否則就會在利益衝突時落入進退兩難的處境。與動物不同的是，我們不倚賴生物本能決定一件事情重要與否，而是我們如何區分眼前一切事物的優先次序。這個建立在「價值」之上的優先次序，是個紮紮實實的道德問題。
+人類作為「目的性的存在」，我們**不可能假裝所有事情都不重要、抑或都一樣重要**。這個建立在「價值」之上的優先次序，是個紮紮實實的道德問題。
 
 **一個人選擇參與這個世界的方式——就算他不相信道德、不認為生命有意義——在最根本的定義上就是個道德命題。無論你選擇怎麼活，那都是個道德性的價值選擇。**
 
 ---
 
-## 社群的價值階級
+## 社會的價值階級
 
-無論在家庭、學校、軍隊、或職場，我們隨時都在摸索著當下身處之群體的目標為何、秩序是如何建構、人與人之間的關係是什麼，進以衡量自己的所在位置、用適當的方式言行。唯有如此，我們才能發現自己在群體中的功能和角色、發揮個人的所長、定義自身存在（之於當下群體）的價值——**「社會化」就是一個人將「個體目標」向「群體目標」校準對齊的過程**，它從我們牙牙學語以來就從未停止過。
+無論在家庭、學校、軍隊、或職場，我們隨時都在摸索著當下身處之群體的目標為何、秩序是如何建構、人與人之間的關係是什麼，進以衡量自己的所在位置、用適當的方式言行。唯有如此，我們才能發現自己在群體中的功能和角色、發揮個人的所長、定義自身存在（之於當下群體）的價值。
+
+**「社會化」就是一個人將「個體目標」向「群體目標」校準對齊的過程**，它從我們牙牙學語以來就從未停止過。而**社會階級**——人在群體中的定位、專責、管理機制——就是**眾人一起相信「某些東西比其他東西更重要」、奉行一系列共同的價值階級所產生的結果**。
 
 一間公司的共同目標若是「創造最大利潤」，那麼公司內的每一個人都需要被放在能夠成就這個目標的位置、各司其職，你跟其他人應該如何合作互動都會得到定義和規範，你也會被賦予相對應的使命和職責、定義著你之於這個群體的存在意義。同樣地，一個家庭裡的共同目標若是「和諧安康」，那麼家庭成員就必須為此齊心協力、扮演好各自的角色、充分認知到自己能夠為家庭創造的貢獻。
 
 這是為什麼在一個健康的企業文化下，思考「你可以為公司創造什麼價值」往往是對你有利無害的策略；這是為什麼在家中長輩重病時，理想狀況是家庭成員們都能清楚自己可以做點什麼，有錢出錢、有力出力；這更是為什麼對於一個社會新鮮人或家中小孩來說，他能替自己做的最壞打算，就是當一個難以合作、沒人喜歡、凡事只想到自己的自私鬼（我並不是說職場老鳥或家中長輩就有資格這麼做）。
-
-由此可見，所謂的**社會階級**——人在群體中的定位、專責、管理機制——就是**眾人一起相信「某些東西比其他東西更重要」、奉行一系列共同的價值階級所產生的結果**。
-
-
-
-當代名著[《人類大歷史》](https://www.books.com.tw/products/0010774982)中最重要的論點之一，是人類如何運用「共同想像」去匯集超過單一部落的群眾、以完成唯有眾志成城才可能實現的巨大成就。在宗教組織、政治制度、金融系統等成功讓大量人類有效合作的「共同想像」背後，都蘊含了 「某些事物比其他事物更重要」 的前提：人們學會相信「某個神」、「某種政治理念」、「某些可交易的籌碼」比其他同類型的東西還更重要、更需要被捍衛、更適合作為引領眾人的指標。
-
-中國清朝亦有統計結果顯示，當遭逢飢荒時，宗祠林立的地區的動亂次數明顯少於那些只有零星宗祠的地區 [1]。而宗祠是什麼？它就是儒家思想的實體化、是儒家禮教「扎根」的象徵、是人們精神世界的具體依歸。可想而知，儒家思想盛行的地區，人們在天災時互相紓困的比例較高，因此較能夠和諧地度過難關；儒家不興之處，人們沒有共享一套引導個人行為的價值，所以當災厄降臨時，自然就不容易信任他人會願意幫助自己、亦不會認為自己需要去救濟鄰人，動亂便難以避免。
-
-一套能被長久流傳的社會價值，必定能一定程度地保全該社會的完整與穩定，尤其在法治、金融系統不發達的傳統社會裡，人們除了「價值」以外沒有其他能夠規避風險和維繫群體的好方法時，那麼即便這套價值可能侵害個人自由和福祉，它也有好理由被流傳下去（縱然這不是理想）——活在自由開放、制度完備的現代社會裡，在我們用輕蔑地批判社會結構和傳統價值之前，這是個值得謹記在心的觀點。
-
-
 
 **社會不僅是人類共同生活、交流互動的三維空間，更是人們校準目標、建立秩序的「價值場域」**。這些價值雖然無形，但它們確確實實地指引著我們的生活、也約束著你我的一言一行；它們既是每一天支撐著你我生活的巨網，更是人類歷史長河的必要渠道。
 
@@ -67,9 +43,15 @@ lastmod: 2023-02-23
 
 無論是家庭、公司、乃至整個國家，如果沒有廣受接納的信仰系統、沒有對群體目標的普遍共識、沒有至少一種多數人同意的價值階級，就不可能建立秩序、不可能有效分工並解決問題、不可能產生能夠指引人們去為自己和周遭他人創造更多安康的「生命藍圖」——**一個社會所共享的價值和敘事，是無數前人歷經長時間的磨合、省思、與洗鍊後所得到的，關於人生的系統性解答。**
 
+當代名著[《人類大歷史》](https://www.books.com.tw/products/0010774982)中最重要的論點之一，是人類如何運用「共同想像」去匯集超過單一部落的群眾、以完成唯有眾志成城才可能實現的巨大成就。在宗教組織、政治制度、金融系統等成功讓大量人類有效合作的「共同想像」背後，都蘊含了 「某些事物比其他事物更重要」 的前提：人們學會相信「某個神」、「某種政治理念」、「某些可交易的籌碼」比其他同類型的東西還更重要、更需要被捍衛、更適合作為引領眾人的指標。
+
+中國清朝亦有統計結果顯示，當遭逢飢荒時，宗祠林立的地區的動亂次數明顯少於那些只有零星宗祠的地區 [1]。而宗祠是什麼？它就是儒家思想的實體化、是儒家禮教「扎根」的象徵、是人們精神世界的具體依歸。可想而知，儒家思想盛行的地區，人們在天災時互相紓困的比例較高，因此較能夠和諧地度過難關；儒家不興之處，人們沒有共享一套引導個人行為的價值，所以當災厄降臨時，自然就不容易信任他人會願意幫助自己、亦不會認為自己需要去救濟鄰人，動亂便難以避免。
+
+一套能被長久流傳的社會價值，必定能一定程度地保全該社會的完整與穩定，尤其在法治、金融系統不發達的傳統社會裡，人們除了「價值」以外沒有其他能夠規避風險和維繫群體的好方法時，那麼即便這套價值可能侵害個人自由和福祉，它也有好理由被流傳下去（縱然這不是理想）——活在自由開放、制度完備的現代社會裡，在我們用輕蔑地批判社會結構和傳統價值之前，這是個值得謹記在心的觀點。
+
 我們舉目所見的社會價值和階級秩序，遠遠不是用來限制、壓迫個人自由的無謂枷鎖，而是人類在倉皇紊亂的世界裡，企圖為彼此的生命找到安定與意義的渺小努力。大自然如此殘酷無情、生命如此乖舛無常，如果我們以為人類可以拋開沉重的階級秩序、像童話故事裡的森林小動物般自由獨立、無憂無慮地生活，那實是對世界、對歷史、對人性都太過無知了。
 
-因此，在我們對各種形式的社會秩序提出批判之前，我們應當認清的事實是：**無論宗教、傳統、倫理、或文化，這些價值階級所做的事情，並非只是（現代人樂於控訴的）將你無情地捏塑成適合嵌入社會整體裡的形狀，有甚於此，它們也事先替你把整個社會形塑成了一個穩定互信、有跡可尋、使你能安心容身的地方。**
+**宗教、傳統、倫理、或文化等價值階級所做的事情，並非只是將你無情地捏塑成適合嵌入社會整體裡的形狀，有甚於此，它們也事先替你把整個社會形塑成了一個穩定互信、有跡可尋、使你能安心容身的地方。**
 
 我們應當體認到自己每一天都如何受惠於人類社會歷經長遠歲月所積累的秩序，並以審慎積極的態度參與這個已為我們拓寬道路的世界。
 
