--- a/content/當代的價值真空與道德責任.md
+++ b/content/當代的價值真空與道德責任.md
@@ -12,13 +12,11 @@ lastmod: 2023-02-23
 ---
 ## 後現代的價值真空
 
-戰後，以歐美為中心的全球化潮流，使那些邊境、貿易、文化上對世界開放的國家都在一定程度上走向現代化。這個「現代化」，在思想層面上讓人們廣泛接納了**科學、民主、理性**。若論其本質，那就是世界上大部分地方都在過去一兩百年內，或主動、或被動、或不得不地攝取了大量的古希臘文明養分。
+在當代思潮中打頭陣的，是基於對科學的「信仰」所發展出的**化約論唯物主義**——所謂「理性」的世界觀，就是只對那些可以被觀察、被經驗、被測量的東西嚴肅以待。在這個知識前提下，宗教、傳統、乃至無形的道德，均失去其基礎和合理性；理想、以及**每一個人皆能夠彰顯理想的潛能**，被人們當成迂腐過時的迷信論調拋諸腦後。
 
-然而，當時間快轉至今天你我身處的後現代，卻絲毫不見古希臘藝術中對人類理想典範的歌頌與追求。在當代思潮中打頭陣的，反而是基於對科學的「信仰」所發展出的**化約論唯物主義**——所謂「理性」的世界觀，就是只對那些可以被觀察、被經驗、被測量的東西嚴肅以待。在這個知識前提下，宗教、傳統、乃至無形的道德，均失去其基礎和合理性；理想、以及**每一個人皆能夠彰顯理想的潛能**，被人們當成迂腐過時的迷信論調拋諸腦後。
+如今，長時間被歐美自由派主導的流行文化所洗禮的先進世界，充滿了以個人為中心、「你決定你自己是誰」的可能性，但這些長期服用西方文化輸出的開放國家、甚至是美國本身，亦面臨著**流傳已久、為社會建立秩序的中心價值的流失**。網際網路、社群媒體、經濟危機、COVID-19、乃至烏俄戰爭，都只是將人類加速帶往更加疏離彼此、喪失共感、難以取得共識的元宇宙。
 
-當社會底層數百年來被廣為接納、用以凝聚眾人的共同價值及原則，在後現代思潮下被以迂腐守舊、箝制自由之名給破壞，便引領我們走向現在這個百花齊放、開放多元、但也**異常分歧和激化**的世界。如今，長時間被歐美自由派主導的流行文化所洗禮的先進世界，充滿了以個人為中心、「你決定你自己是誰」的可能性，但這些長期服用西方文化輸出的開放國家、甚至是美國本身，亦面臨著**流傳已久、為社會建立秩序的中心價值的流失**。網際網路、社群媒體、經濟危機、COVID-19、乃至烏俄戰爭，都只是將人類加速帶往更加疏離彼此、喪失共感、難以取得共識的元宇宙。
-
-於是，承襲唯物主義的，是各種矛盾、現代人卻經常遊走其間的觀點：
+承襲唯物主義的，是各種矛盾、現代人卻經常遊走其間的觀點：
 
 -   上帝就跟聖誕老人一樣是心智不成熟者的想像，教徒則多是反智的保守人士
 
@@ -28,23 +26,15 @@ lastmod: 2023-02-23
 
 -   資本主義巨獸的成長，端賴自嘲為社畜的我們繼續秉持享樂主義、預支著下一筆能帶來多巴胺的消費，因為傻瓜才會留著未來購買力只會更貶的錢
 
-這些是所謂「理性」、具批判性、有「獨立思考能力」、不僵固不迷信的自由派觀點。為了跟保守、傳統、迷信等現代人不願被貼上的詞彙保持距離，人們寧可任由各式各樣零碎、矛盾、沒有中心思想的觀念引導自己的生活，也不再願意梳理並堅定自己生命所需的價值觀和道德原則。
-
-許多人就這麼停留在「對一切保持懷疑和批判」的安全地帶，鍛鍊出一套能輕蔑否定任何社會成規、道德原則、人類典範的懷疑主義論調。這讓他們自覺比其他傻呼呼按照「社會對你的期待」生活的人還要正確、也更有「知識份子」的姿態。他們以為只要不高舉任何堅定的意見，就不可能被證明是錯的——極不恰當地**將犬儒主義跟真理混為一談。**
-
-在個人的人生觀方面，當宗教、傳統、道德都成為對現代人毫無吸引力、避之唯恐不及的禁忌話題，人們仍急於追尋更多元更廣泛的意義來源。娛樂、政治、環境、性別、甚或諸多清新無害的新時代「迷信」（人不信教卻信命理？），都成為了人們生命中的中心議題和指導原則。
+為了跟保守、傳統、迷信等現代人不願被貼上的詞彙保持距離，人們寧可任由各式各樣零碎、矛盾、沒有中心思想的觀念引導自己的生活，也不再願意梳理並堅定自己生命所需的價值觀和道德原則。許多人就這麼停留在「對一切保持懷疑和批判」的安全地帶，鍛鍊出一套能輕蔑否定任何社會成規、道德原則、人類典範的懷疑主義論調。這讓他們自覺比其他傻呼呼按照「社會對你的期待」生活的人還要正確、也更有「知識份子」的姿態。他們以為只要不高舉任何堅定的意見，就不可能被證明是錯的——極不恰當地將犬儒主義跟真理混為一談。
 
 現代人經常天真地以為自己奉行著充滿意志力量、能創造自身生命意義的存在主義，但他們真正身體力行的，更多是為了填補後現代的價值空洞而採取的消費享樂主義。許多人無法想像除了「**[追求個人快樂](https://twitter.com/dans_huang/status/1571497515060699137?s=20)**」之外還能有什麼讓生活有點憧憬的方式，就更別說生小孩——這種在經濟和生活品質上都穩賠不賺、吃力不討好的生意了。他們甚至可能會超前佈署地同情小孩說不定並不想被生到這個糟糕的世上，還得成為全球暖化的受災戶兼共犯。
 
-同時，許多深受自由派文化洗禮的人，一邊開放包容地宣揚人沒有「應該」要有的樣子、每個人都可以選擇成為他想要成為的人，一邊又矛盾地認定這種包容多元是人們「應該」具備的當代美德。他們相信可以**創造自己人生的價值、為自己本來的樣子感到驕傲、不需要等其他人的批准和認可**，卻依然擔心他們「創造自己的價值」的方式有沒有被別人看見和欣賞、也希望他們在社群媒體上分享的「驕傲地做你自己」這種又酷又性格的訊息能夠獲得他人的關注。
+深受自由派文化洗禮的許多人，一邊開放包容地宣揚人沒有「應該」要有的樣子、每個人都可以選擇成為他想要成為的人，一邊又矛盾地認定這種包容多元是人們「應該」具備的當代美德。他們相信可以**創造自己人生的價值、為自己本來的樣子感到驕傲、不需要等其他人的批准和認可**，卻依然擔心他們「創造自己的價值」的方式有沒有被別人看見和欣賞，還可能希望他們在社群媒體上分享的「驕傲地做你自己」這種又酷又性格的訊息能夠獲得他人的關注。
 
-他們會說自己基於開放包容的價值，相信人沒有一定要怎麼言行處世才比較好、認為那些對道德理想的堅持大多是無謂的堅持和對個人自由的迫害。只要配上不婚不生的「前衛新觀念」，這個無敵組合就可以保護他們畸形的道德相對主義永遠不被現實世界中、家裡牙牙學語的那個小怪物打臉。畢竟，**[道德相對主義，是個在知識上捍衛起來很方便、在現實中要實踐卻幾無可能的東西](「價值階級」之於個人和社會.md)**——尤其當你小孩一股腦地做些企圖惹毛你的事的時候。
+他們會說自己基於開放包容的價值，相信人沒有一定要怎麼是什麼樣貌才比較好、認為那些對道德理想的堅持大多是僵化的無謂枷鎖及對個人自由的迫害。若配上不婚不生的「前衛新觀念」，這個無敵組合就可以保護他們畸形的道德相對主義永遠不被現實世界中、家裡牙牙學語的那個小怪物打臉。畢竟，**[道德相對主義，是個在知識上捍衛起來很方便、在現實中要實踐卻幾無可能的東西](「價值階級」之於個人和社會.md)**——尤其當你小孩一股腦地做些企圖惹毛你的事的時候。
 
-極端一點的例子是，甚至有人基於這種**矛盾地充滿了道德自信的道德相對主義**，能隨性地、帶著知識傲慢地宣稱：活在北韓集權統治下的無知人民或許其實很快樂；基督教堅持的一神論都只是教徒們一廂情願的唯心論；用共產主義取代萬惡的資本主義搞不好也不錯，只要我們放下成見、以及對既定道德理想的「執念」——絲毫未覺能允許他們講出這番打高空言論的，正是資本主義帶給他們的菁英教育和舒適生活。
-
-畢竟，既然一切對錯都只是詮釋的角度問題，這種搬弄是非的巧言淫辭也自然是信手拈來了。
-
-總結而言，**現代人經常毫無自覺地將世界觀建立在唯物論和[虛無主義](「樂觀虛無主義」與生命意義)的雜交基礎上，有意或無意地承認了「人類是地球的癌細胞」、「一切社會都是建立在階級權鬥之上」、「沒有真理、只有解釋」這些近代知名的反人類、反秩序、及反道德的觀點。**
+總結來說，**現代人經常毫無自覺地將世界觀建立在唯物論和[虛無主義](「樂觀虛無主義」與生命意義)的雜交基礎上，有意或無意地承認了「人類是地球的癌細胞」、「一切社會都是建立在階級權鬥之上」、「沒有真理、只有解釋」這些近代知名的反人類、反秩序、及反道德的觀點。**
 
 當我們相信人類是地球的癌細胞，那麼要我們努力減少自己對環境的衝擊、要求政治高層們不顧其他人的當前安康去為未來採取行動、甚至相信自己不應該傳宗接代才算為減緩暖化盡一份力，這些想法便一點都不奇怪。當我們相信社會是階級鬥爭的戰場、人與人的互動是建立在權力遊戲之上，那麼輕易地視他人為自私愚蠢、視社會慣習為牢籠腳鐐、視文明秩序為過往暴力的累積，這些觀點也就似乎說得過去。
 
@@ -54,9 +44,7 @@ lastmod: 2023-02-23
 
 ## 道德責任的逃避
 
-我相信，這些「進步」觀念之所以如此吸引人、如此難以辯解，不是因為它們真的很有說服力、或支持這些觀點的證據比較多，而是因為原本能輕鬆駁斥這種觀點的基礎，已經被許多人遺忘。
-
-那個基礎是：**每個人肩上都背負著神聖不可取代的道德重任。**
+我相信，這些「進步」觀念之所以如此吸引人、如此難以辯解，不是因為它們真的很有說服力、或支持這些觀點的證據比較多，而是因為原本能輕鬆駁斥這種觀點的基礎，已經被許多人遺忘。那個基礎是：**每個人肩上都背負著神聖不可取代的道德重任。**
 
 **道德，就是關於「應然」的知識、是個人所信仰的「絕對」價值、是指引生命的準則和理想。**
 
@@ -74,19 +62,11 @@ lastmod: 2023-02-23
 
 一個人若極力避免去承認任何形式的「絕對」價值、拒絕摸著良心想想自己是否有哪些可以做得更好的地方，就可以不需要認知到自己的愚昧、怠惰、和不足，就可以繼續充滿正能量地「自我接納」、相信「我已經夠好了」——逛一圈書局的心理勵志專區，便可看見各種「擁抱自己的不完美」的溫柔宣導。
 
+若我們只因為人類歷史上存在著許多「以善之名」的暴行，就寧願相信一切只是詮釋、沒有對錯可言，那顯然就忽視了人類集體為取得「關於『善』的共識」的努力，以及這份努力如何凝聚群體、為我們創造更幸福有意義的生活。
+
 假如，靈性傳統和古典美德所說的是對的：每個人肩上都確實背負著神聖的道德重任、都有修養品德的基本人生功課得做、而且也**其實都樂意當個品格能獲得認可的好人**，那麼我們就不得不做出一個結論：現在之所以有許多人相信著反人類、反秩序、及反道德的後現代觀點，是因為他們不願甘冒風險、去**面對自己品德上的潛在挫敗。**
 
-
-
-這裡我得立即做出澄清。
-
-第一，我顯然不是說秉持後現代觀點、或努力「自我接納」的人一定在品德上是有瑕疵的。我是說，拒絕承認更高的道德理想、別對個人品格要求過高，就可以避免我們放大檢視自己身上的品德缺失、讓自己一時之間可以好過點——即便只是一時。
-
-第二，每個人都想當自己人生故事裡的「好人」，但當然不保證一個人相信的「好」就是對他人真正的好。所以，我並不是主張只要你信教或讀論語就可以確保你相信的「好」是千真萬確的；我也清楚人類歷史上有無數災難就是因為組織宗教高舉著他們相信的「好」所釀成的。
-
-然而，假如「好」或「善」（Good）是這麼容易定義的東西，這世界老早就不需要哲學家了。若我們只因為人類歷史上存在著許多「以善之名」的暴行，就寧願相信一切只是詮釋、沒有對錯可言，那顯然就忽視了人類集體為取得「關於『善』的共識」的努力，以及這份努力如何凝聚群體、為我們創造更幸福有意義的生活。
-
-當你能夠謙卑地、日復一日地努力省思並修正自己的言行，你必將看見自己龐大的道德潛能，甚至在某些時刻逼近自己理想中的自我。當你每天努力彌補自己的道德缺陷、盡力為身邊他人帶來更多的安康（或至少不要帶來不必要的苦難），你就不可能認為人類是這個星球上的寄生蟲、將社會問題一股腦地歸咎於權力結構、認為唯有政府有所作為才能讓事情變得更好。
+當你能夠謙卑地、日復一日地努力省思並修正自己的言行，你必將看見自己龐大的道德潛能，甚至在某些時刻逼近自己理想中的自我。當你每天努力彌補自己的道德缺陷、盡力為身邊他人帶來更多的安康（或至少不要帶來不必要的苦難），你就不可能認為人類是這個星球上的寄生蟲、將社會問題一股腦地歸咎於權力結構、認為唯有政府拿出公權力控制大眾才能讓事情變得更好。
 
 相反地，你會發現只要秉持品格，即便過著極其平凡的生活也能深具意義。你更將相信人類確實有潛力成為真正善良、同理、勇敢、有智慧的物種。你會承擔起讓世界變得更好的責任，並透過為你周遭的人們成為最好的自己，來盡一份力。
 
