--- a/content/秩序是靈魂的第一需要.md
+++ b/content/秩序是靈魂的第一需要.md
@@ -44,7 +44,7 @@ lastmod: 2023-02-26
 
 相對地，我們常聽人說華人社會看待事情的順序是「情先於理先於法」，這突顯了儒家社會對人倫、真誠的強調，再由家庭倫理及個人德性去發展出重視群體、強調公德的法治觀。對比基督徒的個人德性是建立在每個人與上帝間一對一的神聖關係，儒家社會的個人德性則是建立在人與人之間的真誠關懷和合理互動上。
 
-這是儒家秩序的一大優勢，因為這給我們更多彈性去處理複雜的社會議題；我們的法治是公眾道德聚焦後的最小公倍數、但不會成為公眾道德的指標。另一方面，這也讓儒家社會能適應政府擁有一定程度的權力集中，在大規模緊急事件發生時（如COVID），人們比較願意接受政策的指引、歸順群體地共同行動、對危機做出快速反應。
+這是儒家秩序的一大優勢，因為這給我們更多彈性去處理複雜的社會議題；我們的法治是公眾道德聚焦後的最小公倍數、但不會成為公眾道德的指標。另一方面，這也讓儒家社會能適應政府擁有一定程度的權力集中，在大規模緊急事件發生時，人們比較願意接受政策的指引、歸順群體地共同行動、對危機做出快速反應。
 
 ---
 
@@ -54,17 +54,7 @@ lastmod: 2023-02-26
 
 然而歷史告訴我們，社會的尺規並非總是理想美好的東西，許多時候它更是個不得不將人類靈魂削足適履的生硬規範。我們都知道秩序有可能替暴君背書、長久傳承的價值也可能迫害個人。
 
-因此，當我們相信當前的社會隱含某種系統性的問題，應該考慮以下幾種情形：
-
-第一，這個價值階級裡視為優先的東西有部分是錯的、或不合時宜的，需要汰換成新的、更符合當代生活與群體共識的項目。
-
-第二，這個價值階級有可能流於理想、缺乏現實條件支持，所以無法在當前社會的現實條件下有效運作、或即使運作了也無法帶來它宣稱的成果，僅能讓人們過著差強人意的生活。
-
-第三，這個價值階級的宣稱不乏實用性和實際成果，但因為時代演進，人們未能看清其價值、持續遵循、樂於將當前穩定視為理所當然，所以在引領群體的效用上漸顯乏力，這是價值階級在運行上出現了瑕疵，但並不代表價值階級本身是錯的。
-
-當我們嘗試檢討社會的秩序時，應當留心自己真正的動機、辨明自己的主張是哪一種，而不該囫圇吞棗地認定社會的問題是上述三者加總、草率做出「當前的社會秩序有其危害、故值得摒棄」的結論，甚至沒能夠提出繼續引領群體的替代方案。
-
-許多前衛開放的理想份子經常犯下的錯，正是一股腦地反動、想要揚棄傳統與秩序，卻沒看到自己腳下踩著的正是文化長河走過千百年所積累出的深厚土壤；如果真的將社會共同遵循的價值與秩序拋出腦後，你我生活中的一切「已知」都勢必將墮入混沌。流於意識形態、缺乏真知灼見的革命，更多只有啟動混亂的效用，而無法為社會注入新的、更有效引領群體前進的秩序。
+許多前衛開放的理想份子經常犯下的錯，是一股腦地反動、想要揚棄傳統與秩序，卻沒看到自己腳下踩著的正是文化長河走過千百年所積累出的深厚土壤；如果真的將社會共同遵循的價值與秩序拋出腦後，你我生活中的一切「已知」都勢必將墮入混沌。流於意識形態、缺乏真知灼見的革命，更多只有啟動混亂的效用，而無法為社會注入新的、更有效引領群體前進的秩序。
 
 任何形式的革命都不是廉價的、讓大家喊起來自我感覺良好的東西，它背負著某種對現況的深度檢討與沉痛省思、最終仍不得不為的領悟，更得肩負著扛下一切後果的責任感。它不會、也不該只是某些人企圖卸除加諸在自己身上的制約或責任、所以提出要其他人有所改變的要求。
 
@@ -76,6 +66,6 @@ lastmod: 2023-02-26
 
 企業可能因文化腐敗而聘僱或晉升錯誤的人選、家庭可能因缺乏自省而以傳統價值去傷害個人自由、你我亦可能一時盲目而錯把另有所圖的人當成盟友，但這些都沒有消減秩序之於人類群體的重要性。相反地，這顯示了為什麼我們不僅必須充分認知到秩序的運作、時時審視著當下身處的組織是圍繞著什麼價值而生，更要慎重地面對關於人的各種決定、積極地捍衛價值的矗立、並適時做出調整與更正。所以我們在商管領域總能聽到關於企業文化的討論，也是為什麼當家裡長輩相繼過世時，我們能從後輩們接下來的互動中清楚觀察到家庭價值的彰顯或失落。
 
-**唯有當我們釐清秩序、傳統、規範背後的原則，才能對之進行像樣的檢討**。盲目服從規範與教條無益個人智識的提升，當然也就不可能促進文明的進步。我們既不應該因為先輩已經替我們建立了成規和傳統就矇上眼照著幹、不花任何力氣去理解規範和傳統背後的原則，也不應該因為任何成規和傳統是先輩留下來的「過時產物」，就在還沒有看清它們的原則及意義、甚至也給不出一個像樣的替代方案時，就將它們恣意鄙棄。
+**唯有當我們釐清秩序、傳統、規範背後的原則，才能對之進行像樣的檢討。** 盲目服從規範與教條無益個人智識的提升，當然也就不可能促進文明的進步。我們既不應該因為先輩已經替我們建立了成規和傳統就矇上眼照著幹、不花任何力氣去理解規範和傳統背後的原則，也不應該因為任何成規和傳統是先輩留下來的「過時產物」，就在還沒有看清它們的原則及意義、甚至也給不出一個像樣的替代方案時，就將它們恣意鄙棄。
 
 針對價值、原則、意義的討論是艱深困難的，但也往往是最重要的。**無論我們承襲或變革，都有責任去領會既有秩序背後的深意。先求守成，再求改進。**
