--- a/content/能源、貨幣、與人腦.md
+++ b/content/能源、貨幣、與人腦.md
@@ -9,9 +9,7 @@ tags:
 date: 2023-02-23
 lastmod: 2023-02-23
 ---
-19世紀以來，人類整體對於「能源」抱持著理所當然的態度，致使我們為其支付錯誤的價格、還透過金融手段去預支未來能源，而今往往是為了繼續創造和運營那些能觸發多巴胺、加速消費成癮、疏離社群連結、深化社會對立的科技產品和演算法——能源、貨幣、及人腦，是人類文明正瀕臨危機的三大面向，且環環相扣著。
-
-如果現代人類想避免在二十一世紀剩下的日子裡為自己或自然界帶來災難，就得借鏡歷史、瞭解我們是如何走到今天的困境。
+能源、貨幣、及人腦，是人類文明正瀕臨危機的三大面向，且環環相扣著。如果現代人類想避免在二十一世紀剩下的日子裡為自己或自然界帶來災難，就得借鏡歷史、瞭解我們是如何走到今天的困境。
 
 （本文改編自[The Great Simplification](https://www.thegreatsimplification.com/animations)系列文章。）
 
@@ -19,13 +17,7 @@ lastmod: 2023-02-23
 
 ## 被奴役的能源
 
-人類歷史發展至今第一個重要的文明轉捩點，是在約莫十萬年前、地球氣候變暖並穩定下來時，發生的第一次農業革命。當時，[轉向農耕和畜牧的人類部落，其生產力大大地超過了仍以狩獵採集為主的表親](https://www.cambridge.org/core/journals/american-antiquity/article/abs/was-agriculture-impossible-during-the-pleistocene-but-mandatory-during-the-holocene-a-climate-change-hypothesis/246B240BFFFBE904B1AC31296AD72949)。
-
-農耕帶來大量的生產力盈餘，[使早期人類向全球擴散](https://wwnorton.com/books/The-Social-Conquest-of-Earth/)，擴大了貿易範圍與科技發展。到了16世紀，[更複雜的社會組織和先進的航海技術](https://www.britannica.com/topic/history-of-Europe/The-emergence-of-modern-Europe-1500-1648)又開啟了人類歷史上另一個驚奇篇章。至此為止，[人類文明都是以生物能——人類和草食動物的肌肉——作為生產活動的動力來源](https://vaclavsmil.com/2021/03/05/grand-transitions-how-the-modern-world-was-made/)，增長幅度有所侷限。
-
-直到19世紀初，一切都改變了。
-
-人類發現如何提取及利用地殼表層下的化石能源——煤炭、石油、天然氣等——來驅動我們的生產活動。就地質學來說，人類無疑是發現了「被封存在地底的太陽能」。在新能源龐大的力量面前，人類和動物的勞動從此退居次位。這乃是史上頭一遭。
+19世紀初，人類發現如何提取及利用地殼表層下的化石能源——煤炭、石油、天然氣等——來驅動我們的生產活動。就地質學來說，人類無疑是發現了「被封存在地底的太陽能」。在新能源龐大的力量面前，人類和動物的勞動從此退居次位。
 
 結合了機器的力量，一加侖的汽油可以在幾分鐘內輸出與一個人勞動一整個月相同的工作量。雖然人類使用肌肉工作的能量效率和靈活度是非常優異的（可以對比驅動一輛汽車的汽油有多少變成了廢熱散失），但在需要蠻力的任務上，再多的人類都無法完成化石能源的工作。
 
@@ -35,35 +27,11 @@ lastmod: 2023-02-23
 
 化石能源的龐大力量， 使數十億人類得以出生，使數十億的人脫離貧窮，更創造了新的神話、制度、以及對未來的期待。無怪乎哲學家Buckminster Fuller將化石能源比喻作人類的「**能源奴隸**」。
 
-
-
-我們祖先的生活與地球的自然規律——太陽、雨水、土壤——緊密相連，但在近幾個世紀一飛衝天的經濟和科技趨勢中，人類與大自然的基本聯繫先是被忽視，然後被遺忘。
-
-[現今經濟的主要驅動力](https://www.sciencedirect.com/science/article/pii/S0921800919310067)大多是免費的。我們往往只需要支付它們的開採成本，卻不必擔心它們如何產生的、它們真正的價值為何、以及它們可能造成的污染。對我們的祖先來說，化石能源簡直就是從地底噴發出來的魔法。
-
-然而，我們不但不知道要對這個一次性的天外橫財心存感恩，反而還捏造故事自欺，宣稱人類此刻擁有的財富和進步，皆是來自我們的聰明才智。
-
-現代經濟理論認為，生產力（它是我們財富和物質進步的基礎）是勞動和資本的產物。在這個等式裡，能源只不過是**另一種投入**，其單位價格僅僅代表著**其對經濟產出的貢獻**。一桶石油代表了人類將近5年的勞動力，而我們只消支付其開採成本（目前在2022年約為50美元），卻不必考慮它被創造出來的數千萬年進程。
-
-我們對化石能源——這項人類經濟的主要投入——並沒有支付正確的價碼，現行的經濟學理論更是輕易忽略了這個事實。**我們已然對能源的真實價值和有限性徹底目盲**。
+在現代經濟理論裡，能源只是一種投入，其單位價格僅僅代表著**其對經濟產出的貢獻**。一桶石油代表了人類將近5年的勞動力，而我們只消支付其開採成本（目前在2022年約為50美元），卻不必考慮它被創造出來的數千萬年進程，顯示了**我們已然對能源的真實價值和有限性徹底目盲**。
 
 ---
 
 ## 被篡偽的貨幣
-
-**能量是生命的「貨幣」**，動植物是能量的第一批投資者——獲取更多的「能量盈餘」，就能使動物在生存和[繁殖](https://read.realityblind.world/view/975731937/152/%C2%A0)方面更具競爭優勢。「能量盈餘」的作用正是物競天擇的核心驅動力，為大自然決定了什麼可能發生，什麼不可能[發生](https://www.jstor.org/stable/84174)。
-
-幾百年來人類消耗這顆稱為「地球」的大電池的速度，是大自然日常光合作用的數百萬倍。化石能源為人類經濟可運用的剩餘能源帶來了巨幅增加。
-
-但這個封存於地底的魔法可不是用之不竭的。
-
-高質量的礦石和能源礦藏已經是過去式了。現在雖仍存在著大量礦藏，但它們的質量較低、開採成本較高、對生態環境破壞性也較大。在自然界中，有無數例子表明了能源確實存在，但要提取它們的代價過於龐大，以致許多選項已不可能被考慮。**在我們的有生之年，人類社會將不得不把越來越多的能源盈餘轉用於獲取能源本身，留下更少我們負擔得起的能源來支持眼前的許多經濟活動。**
-
-就像獵豹付出同等的力氣去追逐一隻肥羚羊、一隻瘦羚羊或一隻兔子會得到完全不同的效益，我們在德克薩斯州的油井、在海底5英里處、或在亞伯達省的沙漠裡榨取石油所得到的效益也大不相同。地球表面下確實存在數萬億桶石油——而且我們知道它們在哪裡——但要怎麼用經濟上（和生態上）有說服力的成本去取得它們，那完全就是另一個問題了。
-
-在這個前所未有的大量剩餘的時代，我們擅長將能源和原料組合成改善人類體驗的科技和發明。新科技可以讓我們更有效地使用資源，或者將自然的運行轉化成能源，但大多數科技都只是為人類創造了新的消費方式，並建立了未來對[能源](https://www.frontiersin.org/articles/10.3389/fenrg.2018.00026/full)和[原料](https://read.realityblind.world/view/388478403/143/)的更高要求。即便像太陽能和風能的綠色能源，也往往只徒增了我們的總能源消耗量，更甚至沒有減少[全球的碳能源使用](https://www.iea.org/reports/electricity-market-report-july-2021)。
-
-
 
 大多數人認為金錢是真正的財富。然而，我們花錢買到的一切，都需要能源來開採、創造、交付、運行、和維護。就這個角度來說，**金錢其實是人類對[能源和資源](https://www.sciencedirect.com/science/article/pii/S0921800919310067#bib0680)的開價。**
 
@@ -75,13 +43,7 @@ lastmod: 2023-02-23
 
 **先進國家現在正利用[債務](https://blogs.imf.org/2021/12/15/global-debt-reaches-a-record-226-trillion/)來提領我們本來沒有能力提領的資源，用以生產我們本來沒有能力消費的商品。這種策略肯定有個截止日——因為有一天，這些新產生的錢都必須被花在真正需要能源的實際事物上。**
 
-
-
-**現代文明已將人類的生命經驗徹底金融化**。我們不僅把人類生活的豐富層次化約為單一的貨幣標記，還貼上了錯誤的價格——所謂錯誤，是以長遠、超越人類自身範疇來說。
-
-貨幣的價格是錯誤的，因為我們可以恣意按按鈕來增加貨幣供應，預支我們根本還沒有提取的天然資源。
-
-能源的價格是錯誤的，因為我們將之視為理所當然、無窮無盡的地底魔法，忽略了它們在任何人類的時間尺度上都是不可再生的。
+所以我們必須了解到：貨幣的價格是錯誤的，因為我們可以恣意按按鈕來增加貨幣供應，預支我們根本還沒有提取的天然資源。能源的價格是錯誤的，因為我們將之視為理所當然、無窮無盡的地底魔法，忽略了它們在任何人類的時間尺度上都是不可再生的。
 
 而現在，人類這個擁有近80億成員的社會性動物正集體追逐著「利潤」；以國內生產毛額計價的「成長」，儼然成為了社會穩定的必需品。人類文明將各項決策和計畫外包給龐大複雜的金融系統，市場對「成長」的上癮卻已取代了任何可能蘊含智慧和自律的替代方案。
 
@@ -91,33 +53,21 @@ lastmod: 2023-02-23
 
 ## 被挾持的人腦
 
-人腦是演化的產物，[我們在工業社會裡每一天的所作所為背後，都埋藏著與祖先相同的演化趨力，驅動我們去追求同樣化學成分的大腦酬賞](https://psycnet.apa.org/record/1992-98504-000)。想當然，這對我們的行為、經濟、以及未來都有深遠影響。
-
-[多巴胺這種神經傳導物質的角色，是為動物——包含人類——創造動機和行動](https://www.sciencedaily.com/releases/2013/01/130110094415.htm#:~:text=The%20widespread%20belief%20that%20dopamine,something%20either%20positive%20or%20negative.)。人們多有誤解的是，產生多巴胺的不是獎賞本身，而是對獎賞的預期。我們[在追求某種東西——例如購物、商業交易——的過程中，多巴胺水準最高](https://youtube.com/watch?v=axrywDP9Ii0)，但在征服了目標之後，多巴胺水準就會消退。
-
 [在物質豐穰的現代社會裡，大眾已對消費太習以為常，以致我們對物質的「渴望」遠遠無法被真正「擁有」給滿足](https://read.realityblind.world/view/975731937/66/)。身處在這個擅長把數十億桶石油轉化成多巴胺的經濟體中，我們慣性地搜刮著那些無法帶來長期滿足感的東西，並透過更多的消費來獲得同樣的感覺。
-
-
-
-人類作為社會性的動物，我們亦承襲了祖先強烈的部落性格、對社會性訊號非常敏銳。我們不但善於與他人比較，也時常尋求認同、接納、權力、及地位。
 
 [隨著物質和帳面財富逐漸成為主要的社會地位象徵，染上了消費主義之病的我們，往往不是著眼於我們真正需要的東西，而是想要能擁有和其他人一樣多——甚至更多——的表面資產](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7905187/)。[越來越多的研究顯示，我們更關心自己收入／財富的所在「級距」，而不是實際數字](https://journals.sagepub.com/doi/abs/10.1177/0956797610362671?journalCode=pssa)。在一個以消費（而不是社群、生態、仁慈、或創造力）為中心的經濟體系中，我們的「絕對財富」和「相對財富」間存在著重要的差別。
 
-人類的部落性亦顯見於我們判斷他人「非敵即友」的傾向上。[現代人仍然會堅定地支持自己的內部群體、輕易排斥外部群體](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0221616)——這個現象小至支持的球隊，大則擴及政治立場、種族或國籍。演化使我們非常擅長為自己不喜歡或不理解的狀況，去指責那些我們陌生但又不願瞭解其立場的人類。
-
-
+人類的部落性亦顯見於我們判斷他人「非敵即友」的傾向上。[現代人仍然會堅定地支持自己的內部群體、輕易排斥外部群體](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0221616)——這個現象小至支持的球隊，大則擴及政治立場、種族或國籍。演化使我們非常擅長為自己不喜歡或不理解的狀況，去指責那些我們陌生但又不願聆聽的人類。
 
 在充斥著物質財富、資訊爆炸、社群媒體橫行的當代文明中，人們已經無可救藥地深信這些觀點：金錢是真的、現代文明的進步要歸功於人類的聰明才智、經濟還可以繼續成長下去。又即便當我們指望他人的觀點能幫助自己理解眼前的複雜世界時，我們往往更在乎「誰說的」，而不是邏輯和證據。
 
-石器時代遺留至今的人類大腦，已無法和不斷挾持你我注意力的演算法匹敵。現代媒體的終極目標就是吸引人們的注意力、將點擊和分享轉換成消費、捕食我們的好奇心和部落心理。
-
-**[充斥各處、為營利而持續優化的演算法，正透過麻痺人們的自覺、加速成癮行為、激化對立、鼓勵對科學的冷漠及不信任，進以分裂我們的社會。](https://www.brookings.edu/blog/techtank/2021/09/27/how-tech-platforms-fuel-u-s-political-polarization-and-what-government-can-do-about-it/)**
+石器時代遺留至今的人類大腦，已無法和不斷挾持你我注意力的演算法匹敵。現代媒體的終極目標就是吸引人們的注意力、將點擊和分享轉換成消費、捕食我們的好奇心和部落心理。**[充斥各處、為營利而持續優化的演算法，正透過麻痺人們的自覺、加速成癮行為、激化對立、鼓勵對科學的冷漠及不信任，進以分裂我們的社會。](https://www.brookings.edu/blog/techtank/2021/09/27/how-tech-platforms-fuel-u-s-political-polarization-and-what-government-can-do-about-it/)**
 
 相較於氣候變遷、能源浩劫、經濟泡沫等危機，社會的對立激化似乎是個獨立的問題，然而**如果我們無法對「是非真偽」有一套共同的認知判準，就不可能針對人類的未來進行有意義的討論**。現階段來說，經濟成長還勉強可以被當成人類群體的共同目標，但隨著成長趨緩、破碎、甚至完全消失，「共同目標」將會是人類集體必須面對的重要挑戰之一。
 
 
 
-人類畢竟是壽命有限的動物，[在情感上，未來對我們來說並不重要](https://read.realityblind.world/view/975731937/96/)，我們往往只關注近在眼前的時間向度：這週末的計劃、這季度的收益、這一期的選舉，以及下一串吸引目光的貼文。我們擅長承諾自己從「明天」開始會做出重大改變，然後明天變成後天、後天變成下禮拜，就這麼循環往復、繼續推遲著實際行動。
+人類是壽命有限的動物，[在情感上，未來對我們來說並不重要](https://read.realityblind.world/view/975731937/96/)，我們往往只關注近在眼前的時間向度：這週末的計劃、這季度的收益、這一期的選舉，以及下一串吸引目光的貼文。我們擅長承諾自己從「明天」開始會做出重大改變，然後明天變成後天、後天變成下禮拜，就這麼循環往復、繼續推遲著實際行動。
 
 [心理學上這叫做「衝動」，經濟學上這叫做「雙曲折現」](http://theoildrum.com/node/7147)。這種時間偏好不但能解釋個人行為，也顯見於人類在能源方面的抉擇。
 
