--- a/content/相愛不是結婚的充要條件.md
+++ b/content/相愛不是結婚的充要條件.md
@@ -9,14 +9,6 @@ tags:
 date: 2023-02-23
 lastmod: 2023-02-23
 ---
-過去一年，從準備好自己的心態、求婚、籌備婚禮、拍婚紗、正式登記，到現在要準備收尾，等三月的家宴辦完，就可以再來規劃一下婚後的出國旅行了。
-
-今年過年，是這輩子第一次用人夫的身份，帶著太太返鄉過年、吃年夜飯，也是第一次得陪著太太一大早趕高鐵回娘家。熟悉的場景卻是截然不同的身份和氣氛，使我感觸良多。
-
-有親友問我，我跟太太在一起四年多，是什麼讓我現在決定要結婚了？我說是「心態準備好了」。他們又問說是指什麼心態？我想了想……
-
----
-
 我似乎從來就沒有相信過結婚會發生在愛情的巔峰，也不認為結婚能夠收合兩個人本來就有的價值觀和生活習慣差異。
 
 先談後者：價值觀和生活習慣差異，在談戀愛過程中本就該盡量磨合出一個彼此都可以接受的模式，畢竟自由戀愛的時代，大家能「試」的是大有機會。**結婚不會奇蹟般地改變任何一個人**；如果結婚後的你還是你，那大概他也還是他，我們不應希冀可以靠結婚挽救愛情。
@@ -37,9 +29,7 @@ lastmod: 2023-02-23
 
 ---
 
-所以親友問我說什麼心態，我說是「**準備好要承擔彼此成為家人後的責任**」。
-
-我不敢說這是婚姻的完美解答，但這是我現在能想到的最好的答案，也是我能給自己做的最好的準備。
+我相信，準備好要結婚，應該意味著「**準備好要承擔彼此成為家人後的責任**」。
 
 成為家人後的責任是什麼？這沒有標準答案，因為每一對伴侶對「家庭」的想像都不盡相同、雙方家庭也會賦予各自的期待，每一個在婚姻關係中的人如何迎接、回應這些期待，都是自己人生的功課。
 
